--- a/DiceRoller.csproj
+++ b/DiceRoller.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>icons8-dice-100.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icons8-dice-100.ico" />
+  </ItemGroup>
 
 </Project>
